# virtual-crypto-exchange

./: .gitignore  Caddyfile  Makefile  README.md  docker-compose-dev.yaml  docker-compose-prod.yaml
.github/workflows/: build-push.yml
api/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
api/src/vce/: __init__.py  app.py  coingecko.py  di.py  orm.py  repository.py  services.py  settings.py  users.py  utils.py
web/: .prettierrc.json  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
web/src/: config.ts  middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(auth)/login/: page.tsx
web/src/app/(auth)/signup/: page.tsx
web/src/app/(dashboard)/: layout.tsx
web/src/app/(dashboard)/assets/: page.tsx
web/src/app/(dashboard)/explore/: page.tsx
web/src/app/(dashboard)/home/: page.tsx
web/src/app/(dashboard)/invite/: page.tsx
web/src/app/(dashboard)/more/: page.tsx
web/src/app/(dashboard)/one/: page.tsx
web/src/app/assets/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/home/: page.tsx
web/src/components/: FormButton.tsx  GithubButton.tsx  GithubIcon.tsx  Header.tsx  LoadingButtonLabel.tsx  LoginForm.tsx  LogoutButton.tsx  Navbar.tsx  NextImageLink.tsx  SignInOrLine.tsx  SignUpForm.tsx  Title.tsx
web/src/components/ui/: input.tsx
web/src/lib/: utils.ts
web/src/lib/actions/: login.ts  logout.ts  refresh.ts  signup.ts
web/src/lib/auth/: jwtSession.ts  passwordHasher.ts  user.ts
web/src/lib/schemas/: jwt.ts  login.ts  signup.ts
(+5 files in other folders)
